<resources>
    <string name="app_name">Le Menestrel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Le Ménestrel - Spread belgian culture</string>
    <string name="nav_header_subtitle">leopold@menestrel.be</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login_btn">Login</string>
    <string name="upload_beer">Mettre cette bière en ligne</string>
    <string name="delete_beer">Supprimer cette bière du serveur</string>
    <string name="select_picture">Selectionner une photo de la bière</string>
    <string name="login_button_text">Login</string>
    <string name="logout_button_text">Logout</string>
    <string name="login_prompt">Connectez-vous pour administrer l\'app</string>
    <string name="login_unsuccessful_msg">Login unsuccessful</string>
    <string name="welcome_message">It\'s currently %1$s.</string>

    <!-- Main Drawer menu-->
    <string name="menu_who">Qui sommes-nous ?</string>
    <string name="menu_breweries">Les brasseries</string>
    <string name="menu_events">Nos événements</string>
    <string name="menu_artists">Les artistes</string>
    <string name="menu_beers">Les bières</string>
    <string name="menu_login">Administration bières</string>
    <string name="menu_admin">Administration de l\'app</string>
    <string name="menu_admin_beers">Administration bières</string>
    <string name="menu_admin_breweries">Administration brasseries</string>
    <string name="menu_admin_places">Administration lieux</string>
    <string name="menu_admin_artists">Administration bières</string>
    <string name="menu_admin_events">Administration événements</string>

    <string name="fact_type_android">Android</string>
    <string name="fact_type_california">California</string>
    <string name="settings_btn">Settings</string>
    <string name="settings_fact_type_title">Fun Fact Type</string>
    <string name="welcome_message_authed">Hello %1$s! %2$s.</string>

    <!-- Beer Admin -->
    <string name="go_to_admin_beer">Aller vers l\'administration des bières</string>
    <string name="preference_fact_type_key">fact_type_pref</string>
    <string name="beer_name">Nom de la bière</string>
    <string name="beer_alcool">Quantité d\'alcool</string>
    <string name="beer_breweries">Nom de la (des) brasserie(s)</string>
    <string name="beer_breweries_hint">Séparez les brasseries par des virgules uniquement</string>
    <string name="beer_alcool_hint">Séparez les dixièmes avec un point</string>
    <string name="beer_picture_hint">N\'oubliez pas de sélectionner une photo</string>
    <string name="beer_ebc">EBC</string>
    <string name="beer_ibu">IBU</string>
    <string name="beer_type">Type de bière</string>
    <string name="beer_image_content_description">(Image de bière manquante)</string>

    <string name="go_to_admin_brewery">Aller vers l\'administration des brasseries</string>
    <string name="go_to_admin_artist">Aller vers l\'administration des artistes</string>
    <string name="go_to_admin_event">Aller vers l\'administration des événements</string>
    <string name="go_to_admin_place">Aller vers l\'administration des lieux</string>

    <!-- Beers Fragment-->
    <string name="title_fragment_beer">Voici les bières que nous avons déjà proposées au Ménestrel</string>
    <string name="menu_beer_details">Détails de la bière</string>

    <string name="title_fragment_brewery">Voici les brasseries que nous avons déjà promues au Ménestrel</string>
    <string name="title_fragment_artist">Voici les artistes que nous avons déjà promus au Ménestrel</string>
    <string name="title_fragment_event">Voici les événements que nous avons déjà organisés au Ménestrel</string>
    <string name="no_internet_connection">Pour charger les données depuis internet, veuillez vous connecter à internet</string>
    <string name="reload">Recharger</string>
    <string name="text_fragment_who">Le Ménestrel sélectionne les meilleures microbrasseries
        et artistes musicaux locaux de chez vous pour les concentrer en événements pour vous les faire découvrir.
        \n\nNos événements itinérants vous feront redécouvrir votre région sous ses aspects les plus sociaux !
        \n\nNotre équipe se compose du fondateur, informaticien, musicien et zythologue et d\'employés encouragés
        à vous faire découvrir les bières et artistes qui vous correspondent au mieux!</string>
</resources>