<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_who"
            android:icon="@drawable/who"
            android:title="@string/menu_who" />
        <item
            android:state_checked="true"
            android:id="@+id/nav_breweries"
            android:icon="@drawable/vintagebrewery"
            android:title="@string/menu_breweries" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/beertruck"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_artists"
            android:icon="@drawable/artists"
            android:title="@string/menu_artists" />
        <item
            android:id="@+id/nav_beers"
            android:icon="@drawable/beer"
            android:title="@string/menu_beers" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/admin"
            android:title="@string/menu_admin" />
    </group>
</menu>