<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/beer_name_detail"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:text="@string/beer_name"
        android:textAlignment="center"
        android:fontFamily="@font/vast_shadow" />

    <ImageView
        android:id="@+id/beer_picture_detail"
        android:layout_width="wrap_content"
        android:layout_height="239dp"
        android:layout_gravity="center"
        android:contentDescription="@string/beer_image_content_description" />

    <TextView
        android:id="@+id/beer_type_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/beer_type" />

    <TextView
        android:id="@+id/beer_alcool_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/beer_alcool" />

    <TextView
        android:id="@+id/beer_breweries_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/beer_breweries" />

    <TextView
        android:id="@+id/beer_ebc_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/beer_ebc" />

    <TextView
        android:id="@+id/beer_ibu_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/beer_ibu" />

</LinearLayout>