<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scroll_view_admin_beer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_constraintBottom_toBottomtOf="parent"
        tools:layout_constraintTop_toTopOf="parent" >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/beer_picture_admin"
            android:layout_width="355dp"
            android:layout_height="302dp"
            android:layout_marginVertical="30dp"
            android:scaleType="centerCrop"
            android:src="@drawable/beer_picture_hint"
            android:contentDescription="@string/beer_image_content_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


        <Button
            android:id="@+id/beer_select_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/select_picture"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beer_breweries_hint" />

        <Button
            android:id="@+id/upload_beer_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/upload_beer"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beer_select_picture"
            app:layout_constraintVertical_bias="0.971" />

        <Button
            android:id="@+id/delete_beer_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/delete_beer"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upload_beer_admin"
            app:layout_constraintVertical_bias="0.971" />

        <EditText
            android:id="@+id/beer_name_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/beer_name"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.118"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beer_picture_admin" />

        <EditText
            android:id="@+id/beer_ebc_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/beer_ebc"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.163"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beer_alcool_hint" />

        <EditText
            android:id="@+id/beer_type_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/beer_type"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beer_alcool_hint" />

        <EditText
            android:id="@+id/beer_alcool_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/beer_alcool"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.874"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beer_picture_admin" />

        <EditText
            android:id="@+id/beer_breweries_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/beer_breweries"
            android:textIsSelectable="true"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beer_type_admin" />

        <EditText
            android:id="@+id/beer_ibu_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/beer_ibu"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.836"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beer_alcool_hint" />

        <TextView
            android:id="@+id/beer_alcool_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beer_alcool_hint"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.937"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beer_alcool_admin"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/beer_breweries_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beer_breweries_hint"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beer_breweries_admin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
